--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,8 @@ body {
     justify-content: space-between;
     align-items: center;
     background-color: #000000;
+    background-image: url('../img/black-paper.png'); /* Ruta a la imagen de textura */
+    background-size: cover; /* Ajustar el tamaño de la imagen al contenedor */
     padding: 10px 20px;
 }
 
@@ -59,4 +61,29 @@ body {
 
 .nav-derecha a:hover {
     color: red;
+}
+
+a[href="#top"] {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    color: white;
+    font-size: 2em;
+    text-decoration: none;
+    z-index: 99;
+}
+
+a[href="#top"]:hover {
+    color: red; /* Optional: Change color on hover */
+}
+
+.carousel-inner {
+    width: 100%;
+    max-height: 700px; /* Ajusta este valor según el tamaño deseado */
+}
+
+.carousel-item img {
+    width: 100%;
+    height: 700px; /* Este valor debe coincidir con max-height anterior */
+    object-fit: cover; /* Ajusta las imágenes para que cubran el contenedor */
 }
