--- a/styles.css
+++ b/styles.css
@@ -77,13 +77,53 @@ a[href="#top"]:hover {
     color: red; /* Optional: Change color on hover */
 }
 
-.carousel-inner {
-    width: 100%;
-    max-height: 700px; /* Ajusta este valor según el tamaño deseado */
+.flex-container{
+    display: flex;
+    flex-direction: row;
 }
 
-.carousel-item img {
+.container-mayor-izquierda{
+    background-color: red;
+    flex: 60%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.container-mayor-izquierda img{
     width: 100%;
-    height: 700px; /* Este valor debe coincidir con max-height anterior */
-    object-fit: cover; /* Ajusta las imágenes para que cubran el contenedor */
+}
+
+.container-menor-derecha{
+    background-color: blue;
+    flex: 40%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 10px 20px;
+}
+
+.container-menor-derecha h2 {
+    color: white;
+    font-size: 30px; /* Tamaño de fuente para el título */
+    text-align: center; /* Centrar el texto del párrafo */
+    margin-bottom: 40px; /* Margen inferior para separarlo del párrafo */
+}
+
+.container-menor-derecha p {
+    color: white;
+    font-size: 16px; /* Tamaño de fuente para el párrafo */
+    text-align: center; /* Centrar el texto del párrafo */
+    margin: 0;
+}
+
+/* Media query para pantallas más pequeñas */
+@media (max-width: 700px) {
+    .flex-container {
+        flex-direction: column;
+    }
+    .container-mayor-izquierda, .container-menor-derecha {
+        flex: 100%;
+    }
 }
