--- a/styles.css
+++ b/styles.css
@@ -106,7 +106,8 @@ a[href="#top"]:hover {
     color: red;
     font-size: 30px; 
     text-align: center; 
-    margin-bottom: 40px;
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
 
 .container-menor-derecha p {
@@ -117,7 +118,8 @@ a[href="#top"]:hover {
 }
 
 .conocenos-btn {
-    margin-top: 30px;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .banner {
@@ -134,9 +136,116 @@ a[href="#top"]:hover {
     color: red;
 }
 
-.custom-card {
-    width: 100%; /* Asegura que ocupe el ancho completo de la columna */
-    height: 400px; /* Ajusta la altura según tus necesidades */
+.cuerpo-card
+{
+    background-image: url('../img/card-bg.jpg');
+    color:white
+}
+
+.flex-container-peliculas {
+    display: flex;
+    flex-direction: row;
+    width: 80%;
+    height: auto; /* Ajusta la altura según tus necesidades */
+    margin: auto;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    border: 2px solid white; /* Borde con color */
+}
+
+.poster
+{
+    display: flex;
+    flex: 35%;
+    width: 100%;
+    border-right: 2px solid white;
+}
+
+.poster img
+{
+    width: 100%;
+    height: 100%;
+}
+
+.info-compra
+{
+    display: flex;
+    flex-direction: column;
+    flex: 65%;
+    justify-content: space-between;
+}
+
+.sinopsis
+{
+    display: flex;
+    flex-direction: column;
+    flex: 80%;
+    justify-content: center;
+}
+
+.sinopsis h2 {
+    color: red;
+    font-size: 30px; 
+    text-align: center;
+    padding: 20px;
+}
+
+.sinopsis p {
+    color: white;
+    font-size: 16px;
+    text-align: center;
+    margin: auto;
+    padding: 5px 30px;
+}
+
+.precio-puntuacion
+{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    flex: 10%;
+    border-top: 2px solid white; /* Borde con color */
+}
+
+.precio
+{
+    display: flex;
+    flex:35%;
+    color: red;
+    font-size: 30px; 
+    justify-content: center;
+    margin: 0;
+    border-right: 2px solid white; /* Borde con color */
+}
+
+.puntuacion
+{
+    display: flex;
+    flex:65%;
+    color: red;
+    font-size: 30px; 
+    padding-left: 30px;
+}
+
+.puntuacion p
+{
+    margin-right: 10px;
+}
+
+.calabazas .fa-star {
+    font-size: 20px;
+    color: orange;
+    margin-right: 5px; /* Espacio entre calabazas */
+}
+
+.calabazas .fa-star.bn {
+    color: gray; /* Color para la estrella en blanco y negro */
+}
+
+.boton-carrito
+{
+    display: flex;
+    flex:10%;
 }
 
 footer{
