--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,68 @@
+/* GENERALES */
+
 body {
     margin: 0;
     font-family: Arial, sans-serif;
     background-color: #000000;
+}
+
+@font-face {
+    font-family: 'horror-font-h2';
+    src: url('fonts/horror-font-h2.ttf') format('truetype');
+}
+@font-face {
+    font-family: 'horror-font-light';
+    src: url('fonts/horror-font-light.ttf') format('truetype');
+}
+@font-face {
+    font-family: 'candara';
+    src: url('fonts/Candara.ttf') format('truetype');
+}
+@font-face {
+    font-family: 'ubuntu';
+    src: url('fonts/Ubuntu-Medium.ttf') format('truetype');
+}
+
+h2{
+    color: red;
+    font-family: 'horror-font-h2';
+    margin: 0;
+}
+
+h3{
+    color: red;
+    font-size:3rem;
+    font-family: 'horror-font-light';
+    margin: 0;
+}
+
+p{
+    color: white;
+    font-size: 1rem;
+    font-family: 'candara';
+    margin: 0;
+}
+
+.banner {
+    background-color: #151414;
+    background-image: url('../img/dark-denim-3.png');
+    width: 100%;
+    padding: 25px 0;
+    text-align: center;
+}
+
+a[href="#top"] {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    color: white;
+    font-size: 2em;
+    text-decoration: none;
+    z-index: 99;
+}
+
+a[href="#top"]:hover {
+    color: red;
 }
 
 /*ESTILOS PARA EL NAVBAR*/
@@ -55,7 +116,8 @@ body {
 .nav-derecha a {
     text-decoration: none;
     color: white;
-    font-size: 16px;
+    font-size: 1.05rem;
+    font-family: 'ubuntu';
     transition: color 0.3s ease;
 }
 
@@ -63,21 +125,9 @@ body {
     color: red;
 }
 
-a[href="#top"] {
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    color: white;
-    font-size: 2em;
-    text-decoration: none;
-    z-index: 99;
-}
+/* ESTILOS PARA EL HOMEPAGE */
 
-a[href="#top"]:hover {
-    color: red;
-}
-
-.flex-container{
+.container-principal-home{
     display: flex;
     flex-direction: row;
 }
@@ -85,8 +135,6 @@ a[href="#top"]:hover {
 .container-mayor-izquierda{
     flex: 60%;
     display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 .container-mayor-izquierda img{
@@ -100,64 +148,47 @@ a[href="#top"]:hover {
     justify-content: center;
     align-items: center;
     padding: 10px 20px;
+    text-align: center; 
 }
 
 .container-menor-derecha h2 {
-    color: red;
-    font-size: 30px; 
-    text-align: center; 
+    font-size: 1.8rem; 
     margin-top: 30px;
     margin-bottom: 30px;
-}
-
-.container-menor-derecha p {
-    color: white;
-    font-size: 16px;
-    text-align: center;
-    margin: 0;
 }
 
 .conocenos-btn {
     margin-top: 20px;
     margin-bottom: 20px;
-}
-
-.banner {
-    background-color: #151414;
-    background-image: url('../img/dark-denim-3.png');
-    width: 100%;
-    padding: 20px 0;
-    text-align: center;
-}
-
-.banner h2 {
-    margin: 0; 
-    font-size: 2em;
-    color: red;
+    font-family: 'ubuntu';
 }
 
 .cuerpo-card
 {
     background-image: url('../img/card-bg.jpg');
-    color:white
+    color:white;
+    font-family: 'ubuntu';
 }
+
+/* ESTILOS PARA PAGINAS PELICULAS*/
+
+/* 1. CONTAINER PRINCIPAL */
 
 .flex-container-peliculas {
     display: flex;
     flex-direction: row;
     width: 80%;
-    height: auto; /* Ajusta la altura según tus necesidades */
+    height: auto;
     margin: auto;
     margin-top: 30px;
     margin-bottom: 30px;
-    border: 2px solid white; /* Borde con color */
+    border: 2px solid white;
 }
 
 .poster
 {
     display: flex;
     flex: 35%;
-    width: 100%;
     border-right: 2px solid white;
 }
 
@@ -175,78 +206,163 @@ a[href="#top"]:hover {
     justify-content: space-between;
 }
 
-.sinopsis
+.trailer
 {
     display: flex;
     flex-direction: column;
     flex: 80%;
-    justify-content: center;
 }
 
-.sinopsis h2 {
-    color: red;
-    font-size: 30px; 
-    text-align: center;
-    padding: 20px;
-}
-
-.sinopsis p {
-    color: white;
-    font-size: 16px;
-    text-align: center;
-    margin: auto;
-    padding: 5px 30px;
+.trailer iframe
+{
+    width: 100%;
+    height: 100%;
 }
 
 .precio-puntuacion
 {
+    background-image: url('../img/card-bg.jpg');
     display: flex;
-    flex-direction: row;
-    align-items: center;
     flex: 10%;
-    border-top: 2px solid white; /* Borde con color */
+    flex-direction: row;
+    border-top: 2px solid white;
 }
 
 .precio
 {
     display: flex;
-    flex:35%;
-    color: red;
-    font-size: 30px; 
+    flex: 35%;
     justify-content: center;
-    margin: 0;
-    border-right: 2px solid white; /* Borde con color */
+    align-items: center;
+    height: 100%;
+    border-right: 2px solid white;
+}
+
+.precio p{
+    font-family: 'ubuntu';
+    font-size: 1.2rem;
 }
 
 .puntuacion
 {
     display: flex;
     flex:65%;
-    color: red;
-    font-size: 30px; 
-    padding-left: 30px;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
 }
 
 .puntuacion p
 {
     margin-right: 10px;
+    font-family: 'ubuntu';
+    font-size: 1.2rem;
 }
 
-.calabazas .fa-star {
+.estrellas .fa-star {
     font-size: 20px;
-    color: orange;
-    margin-right: 5px; /* Espacio entre calabazas */
+    color: rgb(230, 53, 30);
+    margin-right: 5px;
 }
 
-.calabazas .fa-star.bn {
-    color: gray; /* Color para la estrella en blanco y negro */
+.estrellas .fa-star.bn {
+    color: gray;
 }
 
 .boton-carrito
 {
     display: flex;
     flex:10%;
+    font-family: 'ubuntu';
 }
+
+/* 2. CONTAINER SECUNDARIO CON INFORMACION PELICULAS */
+
+.sinopsis-reparto {
+    display: flex;
+    flex-direction: row;
+    width: 80%;
+    margin: auto;
+    margin-top: 50px;
+}
+
+.reparto
+{
+    display: flex;
+    flex: 45%;
+    flex-direction: column;
+    justify-content: flex-start;
+    text-align: center;
+}
+
+table {
+    color: white;
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 30px;
+    text-align: center;
+    box-shadow: 0 0 10px rgba(255, 0, 0, 0.7);
+    border: 2px solid #800000;
+}
+
+th, td {
+    padding: 12px 15px;
+    border: 1px solid #800000;
+}
+
+th {
+    background-color: #400000;
+    color: #ff0000;
+    text-transform: uppercase;
+    font-family: 'ubuntu';
+}
+
+tr:nth-child(even) {
+    background-color: #333; /* Filas pares con fondo gris oscuro */
+}
+
+tr:hover {
+    background-color: #550000; /* Fila en hover con fondo rojo oscuro */
+}
+
+.sinopsis-puntuacionUsuario {
+    display: flex;
+    flex: 55%;
+    flex-direction: column; /* Asegura que los hijos se coloquen en columna */
+    align-items: center; /* Centra horizontalmente */
+    justify-content: space-between; /* Centra verticalmente */
+    text-align: center; /* Centra el texto */
+}
+
+.sinopsis p {
+    color: white;
+    padding: 30px;
+    text-align: center; /* Centra el texto */
+}
+
+.puntuacionUsuario .estrellas{
+    margin-top: 30px;
+}
+
+/* 3. GALERIA */
+
+.galeria {
+    display: flex;
+    flex-direction: column;
+    max-width: 80%;
+    margin: 90px auto;
+    text-align: center;
+    margin-bottom: 40px;
+}
+
+.carousel-inner img {
+    margin-top: 40px;
+    height: 100%;
+    width: 100%;
+    object-fit:contain;
+} 
+
+/* FOOTER */
 
 footer{
     background-color: #000000;
@@ -255,8 +371,15 @@ footer{
     text-align: center;
     height: 70px;
     padding: 20px;
-    width: 100%; 
+    width: 100%;
+    
 }
+
+.copyright p{
+    font-size: 1.1rem;
+}
+
+/* MEDIA QUERIES */
 
 @media (max-width: 700px) {
     .flex-container {
