--- a/styles/styles-peliculas.css
+++ b/styles/styles-peliculas.css
@@ -146,26 +146,26 @@ th {
 }
 
 tr:nth-child(even) {
-    background-color: #333; /* Filas pares con fondo gris oscuro */
+    background-color: #333;
 }
 
 tr:hover {
-    background-color: #550000; /* Fila en hover con fondo rojo oscuro */
+    background-color: #550000;
 }
 
 .sinopsis-puntuacionUsuario {
     display: flex;
     flex: 55%;
-    flex-direction: column; /* Asegura que los hijos se coloquen en columna */
-    align-items: center; /* Centra horizontalmente */
-    justify-content: space-between; /* Centra verticalmente */
-    text-align: center; /* Centra el texto */
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between; 
+    text-align: center; 
 }
 
 .sinopsis p {
     color: white;
     padding: 30px;
-    text-align: center; /* Centra el texto */
+    text-align: center; 
 }
 
 .puntuacionUsuario .estrellas{
@@ -189,3 +189,35 @@ tr:hover {
     width: 100%;
     object-fit:contain;
 } 
+
+@media screen and (max-width: 800px) {
+    .flex-container-peliculas{
+        width: 95%;
+    }
+
+    .puntuacion{
+        flex-direction: column;
+    }
+
+    .precio-puntuacion p{
+        font-size: 1rem;
+    }
+
+    .precio-puntuacion .estrellas .fa-star {
+        font-size: 15px;
+    }
+
+    .sinopsis-reparto{
+        flex-direction: column;
+        margin-top: 10px;
+    }
+
+    .reparto{
+        margin-bottom: 40px;
+    }
+
+    .galeria{
+        margin-top: 40px;
+        max-width: 90%;
+    }
+}
