--- a/styles/styles-peliculas.css
+++ b/styles/styles-peliculas.css
@@ -205,6 +205,7 @@ tr:hover {
 
     .precio-puntuacion .estrellas .fa-star {
         font-size: 15px;
+        margin-right: 1px;
     }
 
     .sinopsis-reparto{
