--- a/styles/styles-novedades.css
+++ b/styles/styles-novedades.css
@@ -77,3 +77,24 @@ label{
     margin: 1rem; 
     text-align: left;
 }
+
+/* Responsiveness */
+
+@media (max-width: 768px) {
+    .banner, .recent-article {
+      padding: 1rem;
+    }
+  
+    h4 {
+      font-size: 1.5rem;
+    }
+  
+    .img-container {
+      max-width: 100%;
+    }
+  
+    .text-container p {
+        padding: 0.5rem;
+    }
+  }
+  
