--- a/styles/styles-homepage.css
+++ b/styles/styles-homepage.css
@@ -1,31 +1,31 @@
 /* ESTILOS PARA EL HOMEPAGE */
 
-.container-principal-home{
+.container-principal-home {
     display: flex;
     flex-direction: row;
 }
 
-.container-mayor-izquierda{
+.container-mayor-izquierda {
     flex: 60%;
     display: flex;
 }
 
-.container-mayor-izquierda img{
+.container-mayor-izquierda img {
     width: 100%;
 }
 
-.container-menor-derecha{
+.container-menor-derecha {
     flex: 40%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     padding: 10px 20px;
-    text-align: center; 
+    text-align: center;
 }
 
 .container-menor-derecha h2 {
-    font-size: 1.8rem; 
+    font-size: 1.8rem;
     margin-top: 30px;
     margin-bottom: 30px;
 }
@@ -36,11 +36,20 @@
     font-family: 'ubuntu';
 }
 
-.cuerpo-card
-{
+.cuerpo-card,
+.cuerpo-card a {
     background-image: url('../img/card-bg.jpg');
-    color:white;
+    color: white;
     font-family: 'ubuntu';
+    text-decoration: none;
+}
+
+.card {
+    transition: transform 0.3s ease;
+}
+
+.card:hover {
+    transform: translateY(-5px);
 }
 
 /* MEDIA QUERIES */
@@ -50,7 +59,8 @@
         flex-direction: column-reverse;
     }
 
-    .container-mayor-izquierda, .container-menor-derecha {
+    .container-mayor-izquierda,
+    .container-menor-derecha {
         flex: 100%;
     }
 }
