--- a/styles/styles-novedades.css
+++ b/styles/styles-novedades.css
@@ -10,14 +10,14 @@
 
 
 .recent-article .article-content {
-    margin-top: 20px;
+    margin-top: 1rem;
 }
 
-.other-news .card {
-    margin-bottom: 20px;
+.otros-articulos .card {
+    margin: 1rem;
 }
 
-.other-news .card img {
+.otros-articulos .card img {
     height: 200px;
     object-fit: cover;
 }
@@ -76,6 +76,15 @@ label{
 .comentarios{
     margin: 1rem; 
     text-align: left;
+}
+
+.card-body {
+    background-color: #151414;
+    background-image: url('../img/dark-denim-3.png');
+}
+
+.card-title{
+    color:firebrick;
 }
 
 /* Responsiveness */
