--- a/styles/styles-carrito.css
+++ b/styles/styles-carrito.css
@@ -19,4 +19,17 @@
   .text-center {
     text-align: center;
   }
+  .contenedor {
+    background-image: url('../img/card-bg.jpg');
+  }
+
+  h4{
+    color: red;
+    font-size: 3rem;
+    font-family: 'horror-font-light';
+    margin: 0;
+  }
+  /* .titulo-resumen{
+    font-size: 2rem;
+  } */
   
