--- a/styles/styles-contacto.css
+++ b/styles/styles-contacto.css
@@ -1,8 +1,4 @@
-.custom-margin {
-    margin-left: 20px;
-    margin-right: 20px;
-}
-.custom-margin {
+.margen-pagina {
     margin-left: 20px;
     margin-right: 20px;
 }
@@ -12,19 +8,19 @@
     padding: 1rem;
 }
 
-.contact-form {
+.form-contacto {
     margin-left: 5rem;
     margin-right: 5rem;
     margin-bottom: 3rem;
     text-align: left;
 }
 
-.custom-flex-container {
+.container-2-bloques {
     display: flex;
     flex-wrap: wrap;
 }
 
-.custom-flex-item {
+.bloque {
     flex: 1;
     padding: 30px;
     padding-left: 50px;  
@@ -37,3 +33,8 @@
     max-width: 600px;
     margin: 0 auto; 
 }
+
+.iframe-maps{
+    border:0;
+}
+
