--- a/styles/styles-contacto.css
+++ b/styles/styles-contacto.css
@@ -29,12 +29,19 @@
 }
 
 .iframe-container {
+    position: relative;
     width: 100%;
-    max-width: 600px;
-    margin: 0 auto; 
+    overflow: hidden;
+    padding-top: 56.25%;
 }
 
-.iframe-maps{
-    border:0;
+.iframe-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
+
 }
 
