cambio de colores del contactos

--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -9,17 +9,23 @@
     <body>
         <nav class="navbar">
             <div class="navbar-izquierda">
-            <a href="index.html" target="_parent"><img src="../img/logo-3.png" alt="Logo" class="logo"></a>
+              <a href="../index.html" target="_parent"><img src="../img/logo-3.png" alt="Logo" class="logo"></a>
             </div>
-
+      
+            <input type="checkbox" id="menu-toggle">
+            <label for="menu-toggle" class="menu-icon">
+              <i class="fas fa-bars"></i>
+            </label>
+      
             <ul class="nav-derecha">
-            <li><a href="../acerca-de.html" target="_parent">ACERCA DE</a></li>
-            <li><a href="../nuestras-peliculas.html" target="_parent">NUESTRAS PELICULAS</a></li>
-            <li><a href="../novedades.html" target="_parent">NOVEDADES</a></li>
-            <li><a href="#">CONTACTO</a></li>
-            <li><a href="../ingresar.html" target="_parent">INGRESAR</a></li>
-            <li><a href="../carrito.html" target="_parent"><i class="fas fa-shopping-cart"></i></a></li>
+              <li><a href="../acerca-de.html" target="_parent">ACERCA DE</a></li>
+              <li><a href="../nuestras-peliculas.html" target="_parent">NUESTRAS PELICULAS</a></li>
+              <li><a href="../novedades.html" target="_parent">NOVEDADES</a></li>
+              <li><a href="../contacto.html" target="_parent">CONTACTO</a></li>
+              <li><a href="../ingresar.html" target="_parent">INGRESAR</a></li>
+              <li><a href="../carrito.html" target="_parent"><i class="fas fa-shopping-cart"></i></a></li>
             </ul>
-        </nav>
+          </nav>
     </body>
 </html>
+
