--- a/styles/styles-ingresar.css
+++ b/styles/styles-ingresar.css
@@ -1,42 +1,44 @@
 /* ESTILOS PARA INGRESAR*/
 
-.main-ingresar{
+.main-ingresar {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
 }
 
-.login-registro{
+.login-registro {
     display: flex;
     flex-direction: column;
     padding: 30px;
 }
 
-.login{
+.login {
     display: flex;
     flex-direction: column;
 }
 
-.login h3{
+.login h3 {
     margin-bottom: 10px;
 }
 
-.login label{
+.login label {
     font-family: 'ubuntu';
-    color: white;;
+    color: white;
+    ;
 }
 
-.login input, button{
+.login input,
+button {
     margin-top: 10px;
     margin-bottom: 10px;
     width: 70%;
 }
 
-.login a{
+.login a {
     color: red;
 }
 
-.registro h3{
+.registro h3 {
     margin-top: 30px;
     margin-bottom: 20px;
 }
@@ -54,7 +56,8 @@
         text-align: center;
     }
 
-    .login, .registro {
+    .login,
+    .registro {
         justify-content: center;
         align-items: center;
     }
