--- a/styles/styles-peliculas.css
+++ b/styles/styles-peliculas.css
@@ -13,42 +13,36 @@
     border: 2px solid white;
 }
 
-.poster
-{
+.poster {
     display: flex;
     flex: 35%;
     border-right: 2px solid white;
 }
 
-.poster img
-{
+.poster img {
     width: 100%;
     height: 100%;
 }
 
-.info-compra
-{
+.info-compra {
     display: flex;
     flex-direction: column;
     flex: 65%;
     justify-content: space-between;
 }
 
-.trailer
-{
+.trailer {
     display: flex;
     flex-direction: column;
     flex: 80%;
 }
 
-.trailer iframe
-{
+.trailer iframe {
     width: 100%;
     height: 100%;
 }
 
-.precio-puntuacion
-{
+.precio-puntuacion {
     background-image: url('../img/card-bg.jpg');
     display: flex;
     flex: 10%;
@@ -56,8 +50,7 @@
     border-top: 2px solid white;
 }
 
-.precio
-{
+.precio {
     display: flex;
     flex: 35%;
     justify-content: center;
@@ -66,22 +59,20 @@
     border-right: 2px solid white;
 }
 
-.precio p{
+.precio p {
     font-family: 'ubuntu';
     font-size: 1.2rem;
 }
 
-.puntuacion
-{
+.puntuacion {
     display: flex;
-    flex:65%;
+    flex: 65%;
     justify-content: center;
     align-items: center;
     height: 100%;
 }
 
-.puntuacion p
-{
+.puntuacion p {
     margin-right: 10px;
     font-family: 'ubuntu';
     font-size: 1.2rem;
@@ -97,10 +88,9 @@
     color: gray;
 }
 
-.boton-carrito
-{
+.boton-carrito {
     display: flex;
-    flex:10%;
+    flex: 10%;
     font-family: 'ubuntu';
 }
 
@@ -114,8 +104,7 @@
     margin-top: 50px;
 }
 
-.reparto
-{
+.reparto {
     display: flex;
     flex: 45%;
     flex-direction: column;
@@ -133,7 +122,8 @@ table {
     border: 2px solid #800000;
 }
 
-th, td {
+th,
+td {
     padding: 12px 15px;
     border: 1px solid #800000;
 }
@@ -158,17 +148,17 @@ tr:hover {
     flex: 55%;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between; 
-    text-align: center; 
+    justify-content: space-between;
+    text-align: center;
 }
 
 .sinopsis p {
     color: white;
     padding: 30px;
-    text-align: center; 
+    text-align: center;
 }
 
-.puntuacionUsuario .estrellas{
+.puntuacionUsuario .estrellas {
     margin-top: 30px;
 }
 
@@ -187,19 +177,19 @@ tr:hover {
     margin-top: 40px;
     height: 100%;
     width: 100%;
-    object-fit:contain;
-} 
+    object-fit: contain;
+}
 
 @media screen and (max-width: 800px) {
-    .flex-container-peliculas{
+    .flex-container-peliculas {
         width: 95%;
     }
 
-    .puntuacion{
+    .puntuacion {
         flex-direction: column;
     }
 
-    .precio-puntuacion p{
+    .precio-puntuacion p {
         font-size: 1rem;
     }
 
@@ -208,16 +198,16 @@ tr:hover {
         margin-right: 1px;
     }
 
-    .sinopsis-reparto{
+    .sinopsis-reparto {
         flex-direction: column;
         margin-top: 10px;
     }
 
-    .reparto{
+    .reparto {
         margin-bottom: 40px;
     }
 
-    .galeria{
+    .galeria {
         margin-top: 40px;
         max-width: 90%;
     }
