--- a/styles/styles-novedades.css
+++ b/styles/styles-novedades.css
@@ -46,6 +46,7 @@ label{
 .img-container {
     margin: 0 auto;
     width: 60rem;
+    max-width: 100%;
 }
 
 .img-container img {
@@ -91,9 +92,8 @@ a {
     text-decoration: none;
 }
 
-/* Responsiveness */
 
-@media (max-width: 768px) {
+@media (max-width:800px) {
     .banner, .recent-article {
       padding: 1rem;
     }
