--- a/styles/styles-acercade.css
+++ b/styles/styles-acercade.css
@@ -1,13 +1,11 @@
-/* styles-acercade.css */
-
 .text-container {
     margin: 2rem 0rem 1rem;
 }
 
 .text-container p {
-    padding: 0.8rem;
+    max-width: 70%; 
+    margin: 0 auto; 
 }
-
 .recent-article {
     padding: 0.5rem;
     margin: 5rem;
@@ -15,6 +13,75 @@
 
 .text-container ul {
     list-style-type: none;
-    padding-left: 0;
-    text-align: center;
+    padding: 0;
+    text-align: center; 
+}
+
+.text-container h2 {
+    margin-bottom: 1rem; 
+}
+
+.text-container ul li {
+    background-color: #444;   
+    padding: 0.8rem 1.2rem;
+    margin-bottom: 1rem; 
+    border-radius: 5px;
+    display: inline-block; 
+}
+
+.text-container ul li:hover {
+    background-color: #555; 
+}
+
+.text-container ul li a {
+    text-decoration: none; 
+    color: #fff; 
+}
+
+.img-container {
+    margin: 0 auto;
+    max-width: 60rem;
+    width: 100%;
+    height: auto;
+}
+
+.img-container img {
+    width: 100%;
+    max-height: 40rem; 
+    height: auto;
+    object-fit: cover;
+}
+
+.img-container img {
+    object-fit: cover;
+    width: 100%;
+    height: auto;
+}
+
+.imagen-despues-titulo {
+    max-width: 100%;
+    height: auto;
+    display: block;
+    margin: 1rem auto;
+}
+
+/* Responsiveness */
+@media (max-width: 768px) {
+    .banner,
+    .recent-article {
+        padding: 1rem;
+        margin: 1rem;
+    }
+
+    h4 {
+        font-size: 1.5rem;
+    }
+
+    .img-container {
+        max-width: 100%;
+    }
+
+    .text-container p {
+        padding: 0.5rem;
+    }
 }
