--- a/styles/styles-contacto.css
+++ b/styles/styles-contacto.css
@@ -1,3 +1,11 @@
+h3 {
+    margin-bottom: 30px;
+}
+
+.contacto-wpp{
+    margin-bottom: 40px;
+}
+
 .margen-pagina {
     margin-left: 20px;
     margin-right: 20px;
