--- a/styles/styles-formulario.css
+++ b/styles/styles-formulario.css
@@ -10,7 +10,7 @@ form label {
     margin-bottom: 5px;
 }
 
-form input, form button {
+form input, form {
     margin-top: 10px;
     margin-bottom: 10px;
     width: 100%;
