--- a/styles/styles-acercade.css
+++ b/styles/styles-acercade.css
@@ -3,9 +3,11 @@
 }
 
 .text-container p {
-    max-width: 70%; 
-    margin: 0 auto; 
+    max-width: 70%;
+    margin: 0 auto;
+    font-family: 'Roboto', sans-serif;
 }
+
 .recent-article {
     padding: 0.5rem;
     margin: 5rem;
